redis-queue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-queue
  namespace: team43
spec:
  selector:
    app: redis-queue
  ports:
    - protocol: TCP
      port: 6379
      targetPort: redis-port
